[gd_scene load_steps=13 format=3 uid="uid://bwkk18ioyhagc"]

[ext_resource type="Script" path="res://scenes/ui/game_over_ui.gd" id="1_0sort"]
[ext_resource type="Texture2D" uid="uid://q0xlp86lmm2m" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_o517y"]
[ext_resource type="Texture2D" uid="uid://dltf0gsoa1s1r" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_o3qrc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cs5w8"]
texture = ExtResource("1_o517y")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_fta6e"]
font_names = PackedStringArray("Yu Gothic UI")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_kcf70"]
font = SubResource("SystemFont_fta6e")
font_size = 62
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tj372"]
texture = ExtResource("2_o3qrc")
texture_margin_left = 96.0
texture_margin_top = 16.0
texture_margin_right = 96.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_jv0co"]
font_names = PackedStringArray("Yu Gothic UI")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_lnvq4"]
font = SubResource("SystemFont_jv0co")
font_size = 36
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_r4enr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Top Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(278, 30)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(298, 394)]
}

[sub_resource type="Animation" id="Animation_wgb7w"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Top Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.554785, 1),
"update": 0,
"values": [Vector2(278, -192), Vector2(278, 30)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 2),
"transitions": PackedFloat32Array(0.329877, 1),
"update": 0,
"values": [Vector2(298, 754), Vector2(298, 394)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_67gb0"]
_data = {
"RESET": SubResource("Animation_r4enr"),
"default": SubResource("Animation_wgb7w")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_0sort")

[node name="Background" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.478431)

[node name="Top Panel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 278.0
offset_top = 30.0
offset_right = 874.0
offset_bottom = 174.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_cs5w8")

[node name="Label" type="Label" parent="Top Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -31.0
offset_right = 44.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_kcf70")

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 298.0
offset_top = 394.0
offset_right = 864.0
offset_bottom = 590.001
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_tj372")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -65.0
offset_right = 210.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time survived:"
label_settings = SubResource("LabelSettings_lnvq4")

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14:45"
label_settings = SubResource("LabelSettings_lnvq4")

[node name="Label2" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated :
"
label_settings = SubResource("LabelSettings_lnvq4")

[node name="MonstersLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "254
"
label_settings = SubResource("LabelSettings_lnvq4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_67gb0")
}
autoplay = "default"
